5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4173/executions/1595_1571.log
== SUBMITION (2019-03-26 17:04:14) 
-- CODE:
a = input("lol")
print(lol.upper())

-- EXECUTION TIME:
0.143984
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1595/1571/main.py", line 2, in <module>
    print(lol.upper())
NameError: name 'lol' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 17:04:15) 
-- CODE:
a = input("lol")
print(lol.upper())

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print(lol.upper())
NameError: name 'lol' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 17:04:20) 
-- CODE:
a = input("lol")
print(a.upper())

-- EXECUTION TIME:
0.121013
-- TEST CASE 1:
---- input:
Primeiro_caso_de_teste
---- correct output:
PRIMEIRO_CASO_DE_TESTE
---- user output:
PRIMEIRO_CASO_DE_TESTE
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
